2008-04-20  Philip Van Hoof <pvanhoof@gnome.org>

	* These problems got highlighted during pre-release 0.0.9
	* Build environment improvements
	* Added --enable-debug=yes (default is no), 
	adds -g -ggdb -O0 -DDEBUG -DDBC to the CFLAGS
	* Added --enable-deprecated=no (default is yes),
	adds -DTNY_DISABLE_DEPRECATED to the CFLAGS
	* Removed all %-names in the Makefile.am files since these are a GNU
	make ism. There are a few remaining GNU make isms like $(subst ...)
	and $(addsuffix ...) who are to be removed / replaced soon
	* Added deprecation marker to gtk-doc-scan's command line
	* Attempt at fixing TnyHeader's documentation

2008-04-18  Jose Dapena Paz  <jose@gondomar.wired.citic.igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c: add a simple hack to
	detect when we cancel the connection dialog (and then report this
	properly).

2008-04-18  Philip Van Hoof <pvanhoof@gnome.org>

	* Removed unnecessary old code rot in TnyCamelSendQueue that might
	cause a deathlock
	* Decprecated tny_send_queue_add, use tny_send_queue_add_async
	* Pre-release 0.0.9 preparations

2008-04-17  Philip Van Hoof <pvanhoof@gnome.org>

	* Corrections to reference handling for TnyCamelSendQueue
	* Removed a tny_folder_get_headers (deprecated API)

2008-04-16  José Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c
	(tny_camel_get_decoded_stream_default): now we detect errors getting
	the decoded stream from camel.
	* libtinymail-gnomevfs/tny-vfs-stream.c (tny_vfs_stream_read):
	return -1 if there was an error reading from the vfs stream.

2008-04-15  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed alerts when get-msg-async takes place to have their account
	not set to NULL
	* Moved the POP's get-msg-qasync queue to its normal interactive queue
	* Various bugfixes

2008-04-14  Philip Van Hoof <pvanhoof@gnome.org>

	* Weak referenced folders in the folder-factor methods
	* Handling uncaching the password during account finalization