@@ -36,9 +36,6 @@ online/offline status.
 
 </para>
 
-@: 
-@:
-
 @tnydevice: the object which received the signal.
 @arg1: 
 
